src/test/deca/context/valid/sansObj/et-binaire.deca
// Description:
//          Utilisation de l'opérateur && sur des booléens
//
// Résultat:
//          Succès
//
{
    boolean a = true;
    boolean b = false;
    boolean c = true;
    if (a && b){}
    if ((a && b) && c){}
}
