src/test/deca/context/invalid/sansObj/eq-binaire-int.deca
// Description:
//          Utilisation de l'opérateur == avec un int et un bool
//
// Résultat:
//Comparaison entre deux membres incompatibles
//
{
    boolean a = true;
    int b = 123;
    boolean c = (a==b);
}